Ajustando Notas Aluno.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -484,6 +484,7 @@ avaliacaoNenhumaDisciplina = There is no Evaluation created for this Discipline.
 avaliacaoSelecioneCurso = Please, select the Course.
 avaliacaoSalva = Evaluation successfully saved.
 avaliacaoDesejaRemover = Do you really want to remove this Evaluation: {0} ?
+avaliacaoPesoNota = Weight
 ########### AVALIAÇÔES End###########
 
 
