--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -483,6 +483,7 @@ avaliacaoNenhumaDisciplina = Nenhuma avaliação cadastrada nessa disciplina.
 avaliacaoSelecioneCurso = Por favor, selecione o curso.
 avaliacaoSalva = Avaliação salva com sucesso.
 avaliacaoDesejaRemover = Deseja realmente remover essa Avaliação: {0} ?
+avaliacaoPesoNota = Peso
 ########### AVALIAÇÔES End###########
 
 
