Adicionando Boletim Avaliações, Notas e Médias Finais.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -485,6 +485,7 @@ avaliacaoSelecioneCurso = Please, select the Course.
 avaliacaoSalva = Evaluation successfully saved.
 avaliacaoDesejaRemover = Do you really want to remove this Evaluation: {0} ?
 avaliacaoPesoNota = Weight
+avaliacaoErroRecuperacao = It is not possible add in the same Period and Discipline the retake test twice
 ########### AVALIAÇÔES End###########
 
 
