--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -484,6 +484,7 @@ avaliacaoSelecioneCurso = Por favor, selecione o curso.
 avaliacaoSalva = Avaliação salva com sucesso.
 avaliacaoDesejaRemover = Deseja realmente remover essa Avaliação: {0} ?
 avaliacaoPesoNota = Peso
+avaliacaoErroRecuperacao = Não é possível duas recuperações no mesmo Período e na mesma Disciplina
 ########### AVALIAÇÔES End###########
 
 
