Adicionando Relatorio ao professor.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -44,6 +44,7 @@ menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
+menuTokenFerramentaProfessorRelatorio = ferramenta.professor.relatorio
 menuTokenFerramentaAluno = ferramenta.aluno
 menuTokenFerramentaAlunoNota = ferramenta.aluno.nota
 menuTokenFerramentaAlunoAgenda = ferramenta.aluno.agenda
