--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -45,6 +45,7 @@ menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
+menuTokenFerramentaProfessorRelatorio = ferramenta.professor.relatorio
 menuTokenFerramentaAluno = ferramenta.aluno
 menuTokenFerramentaAlunoNota = ferramenta.aluno.nota
 menuTokenFerramentaAlunoAgenda = ferramenta.aluno.agenda
@@ -716,7 +717,7 @@ emailAnexo = Anexo
 emailFiltroCurso = Filtro Curso
 emailPara = Para
 emailTipoUsuario = Tipo Usuario 
-emailPeloMenosUsuarioPrecisaSerSelecionado = Pelo menos 1 usuario precisa ser selecionado.  
+emailPeloMenosUsuarioPrecisaSerSelecionado = Pelo menos 1 usuário precisa estar selecionado.  
 emailAbrirTelaParaVisualizarEmails = Abrir tela para visualizar emails
 emailTodosOsCursos = Todos os Cursos
 emailEscolherArquivo = Escolher Arquivo
@@ -727,8 +728,8 @@ emailEnviarEmail = Enviar Email
 relatorio = Relatório
 relatorios = Relatórios
 relatorioBoletimPorPeriodo = Boletim Período
-relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatorios:\n
-relatorioHistoricosEscolar = - Historicos Escolar.\n
+relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatórios:\n
+relatorioHistoricosEscolar = - Históricos Escolar.\n
 relatorioBoletimSalas = - Boletim Cursos.\n
 relatorioFechamentoAno = - Fechamento Ano, entre outros.
 ############EMAIL END############
