Adicionando Notas e arredondamento.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -39,6 +39,7 @@ menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
+menuTokenFerramentaProfessorConteudoProgramatico = ferramenta.professor.conteudoprogramatico
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
 menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
@@ -119,6 +120,8 @@ professorAmbienteNotasCompText2 = - School Grades.\n
 professorAmbienteOcorrencia = NonConformance
 professorAmbienteOcorrenciaCompText1 = Add and Update: \n
 professorAmbienteOcorrenciaCompText2 = - Student NonConformance.\n
+
+professorAmbienteConteudoProgramatico = Subject
 
 professorAmbienteComunicado = News and Emails
 professorAmbienteComunicadoCompText1 = News and Email for: \n
