--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -40,6 +40,7 @@ menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
+menuTokenFerramentaProfessorConteudoProgramatico = ferramenta.professor.conteudoprogramatico
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
 menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
@@ -120,6 +121,8 @@ professorAmbienteNotasCompText2 =- Notas Escolares.\n
 professorAmbienteOcorrencia = Ocorrência
 professorAmbienteOcorrenciaCompText1 = Adicionar e Alterar: \n
 professorAmbienteOcorrenciaCompText2 = - Ocorrências dos Alunos.\n
+
+professorAmbienteConteudoProgramatico = Matéria
 
 professorAmbienteComunicado = Comunicados e Emails da Escola
 professorAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
