Adicionando acertos de arredondamento. Adicionando Recuperação Final Adicionando Adicional Nota

--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -489,6 +489,7 @@ avaliacaoSalva = Avaliação salva com sucesso.
 avaliacaoDesejaRemover = Deseja realmente remover essa Avaliação: {0} ?
 avaliacaoPesoNota = Peso
 avaliacaoErroRecuperacao = Não é possível duas recuperações no mesmo Período e na mesma Disciplina
+avaliacaoErroRecuperacaoFinal = Não é possível adicionar duas Recuperações Finais no mesmo Curso
 ########### AVALIAÇÔES End###########
 
 
