--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -490,6 +490,7 @@ avaliacaoSalva = Evaluation successfully saved.
 avaliacaoDesejaRemover = Do you really want to remove this Evaluation: {0} ?
 avaliacaoPesoNota = Weight
 avaliacaoErroRecuperacao = It is not possible add in the same Period and Discipline the retake test twice
+avaliacaoErroRecuperacaoFinal = It is not possible add in the same Course the final retake test twice
 ########### AVALIAÇÔES End###########
 
 
