Acertando a tabela de notas.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -491,6 +491,7 @@ avaliacaoDesejaRemover = Do you really want to remove this Evaluation: {0} ?
 avaliacaoPesoNota = Weight
 avaliacaoErroRecuperacao = It is not possible add in the same Period and Discipline the retake test twice
 avaliacaoErroRecuperacaoFinal = It is not possible add in the same Course the final retake test twice
+avaliacaoErroAssunto = It is not possible add the same subject twice in the same Period and Discipline
 ########### AVALIAÇÔES End###########
 
 
