--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -490,6 +490,7 @@ avaliacaoDesejaRemover = Deseja realmente remover essa Avaliação: {0} ?
 avaliacaoPesoNota = Peso
 avaliacaoErroRecuperacao = Não é possível duas recuperações no mesmo Período e na mesma Disciplina
 avaliacaoErroRecuperacaoFinal = Não é possível adicionar duas Recuperações Finais no mesmo Curso
+avaliacaoErroAssunto = Não é possível adicionar duas Avaliações com o mesmo Assunto no mesmo Período e Disciplina
 ########### AVALIAÇÔES End###########
 
 
