Adicionando Relatorio Boletim Aluno.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -626,6 +626,7 @@ geralRegarregarPagina = Please, try to reload the page.
 geralBreakLine = \n
 geralImprimir = Print
 geralExcel = Generate Excel Spreadsheet 
+geralErroCaracterColchete = The characters "[" or "]" are not allowed at this field
 ############USO GERAL END############
 
 
