--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -628,6 +628,7 @@ geralRegarregarPagina = Por favor, tente recarregar a página.
 geralBreakLine = \n
 geralImprimir = Imprimir
 geralExcel = Gerar Planilha Excel
+geralErroCaracterColchete = Os caracteres "[" ou "]" não são permitidos nesse campo
 ############USO GERAL END############
 
 
