Adicionando Boletim do Aluno

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -492,6 +492,7 @@ avaliacaoPesoNota = Weight
 avaliacaoErroRecuperacao = It is not possible add in the same Period and Discipline the retake test twice
 avaliacaoErroRecuperacaoFinal = It is not possible add in the same Course the final retake test twice
 avaliacaoErroAssunto = It is not possible add the same subject twice in the same Period and Discipline
+avaliacaoRecuperacao = Retake test
 ########### AVALIAÇÔES End###########
 
 
