--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -491,6 +491,7 @@ avaliacaoPesoNota = Peso
 avaliacaoErroRecuperacao = Não é possível duas recuperações no mesmo Período e na mesma Disciplina
 avaliacaoErroRecuperacaoFinal = Não é possível adicionar duas Recuperações Finais no mesmo Curso
 avaliacaoErroAssunto = Não é possível adicionar duas Avaliações com o mesmo Assunto no mesmo Período e Disciplina
+avaliacaoRecuperacao = Recuperação
 ########### AVALIAÇÔES End###########
 
 
