Adicionando modificações pequenas de design.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -253,6 +253,7 @@ cursoTodosAlunos = All students
 cursoStatus = Status
 cursoAtivo = Enable
 cursoDesativado = Disable
+cursoDuplicado = The following course ''{0}'' already exists.
 ########### Curso FIM ###########  
 
 ########### Periodo Begin ###########
@@ -304,6 +305,7 @@ disciplinaCompText1 = Add and Update Disciplines: \n
 disciplinaCompText2 = - Example 01) English.\n
 disciplinaCompText3 = - Example 02) Math.
 disciplinaDuplicada =  Discipline ''{0}'' already exists in this period.
+disciplinaObrigatoria = Mandatory
 ########### Disciplina FIM ###########  
 
 ############ConteudoProgramatico Begin############
@@ -738,5 +740,10 @@ relatorioVisualisarImprimirRelatorios = Visualize and Print Reports:\n
 relatorioHistoricosEscolar = - Historical School.\n
 relatorioBoletimSalas = - Report Card Courses.\n
 relatorioFechamentoAno = - Year closing and others.
+relatorioBoletimDisciplina = Discipline Report Card 
+relatorioBoletimAnual = Anual Report Card
+relatorioBoletimNotas = Grades Report Card
+relatorioBoletimAluno = Student Report Card
+relatorioHistoricoAluno = Student History
 ############EMAIL END############
 
