--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -252,6 +252,7 @@ cursoTodosAlunos = Todos Alunos
 cursoStatus = Status
 cursoAtivo = Ativo
 cursoDesativado = Desativado
+cursoDuplicado = O curso ''{0}'' já existe. 
 ########### Curso FIM ###########  
 
 ########### Periodo Begin ###########
@@ -303,6 +304,7 @@ disciplinaCompText1 = Adicionar e Alterar Disciplinas: \n
 disciplinaCompText2 = - Exemplo 01) Português.\n
 disciplinaCompText3 = - Exemplo 02) Matemática.
 disciplinaDuplicada =  Disciplina ''{0}'' já existe neste período.
+disciplinaObrigatoria = Obrigatória
 ########### Disciplina FIM ###########  
 
 ############ConteudoProgramatico Begin############
@@ -739,4 +741,9 @@ relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatórios:\n
 relatorioHistoricosEscolar = - Históricos Escolar.\n
 relatorioBoletimSalas = - Boletim Cursos.\n
 relatorioFechamentoAno = - Fechamento Ano, entre outros.
+relatorioBoletimDisciplina = Boletim Disciplina
+relatorioBoletimAnual = Boletim Anual
+relatorioBoletimNotas = Boletim Notas
+relatorioBoletimAluno = Boletim Aluno
+relatorioHistoricoAluno = Historico Aluno
 ############EMAIL END############
