Adicionando gerar vários excels de uma vez.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -630,6 +630,7 @@ geralBreakLine = \n
 geralImprimir = Print
 geralExcel = Generate Excel Spreadsheet 
 geralErroCaracterColchete = The characters "[" or "]" are not allowed at this field
+geralMultipleExcel = Generate Multiple Excel Spreadsheets 
 ############USO GERAL END############
 
 
