--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -632,6 +632,7 @@ geralBreakLine = \n
 geralImprimir = Imprimir
 geralExcel = Gerar Planilha Excel
 geralErroCaracterColchete = Os caracteres "[" ou "]" não são permitidos nesse campo
+geralMultipleExcel = Gerar Multiplas Planilhas Excel
 ############USO GERAL END############
 
 
