Adicionando relatorio Professor vs Disciplina

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -36,6 +36,8 @@ menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
 menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
+menuTokenFerramentaCoordenadorBoletim = ferramenta.coordenador.boletim
+menuTokenFerramentaCoordenadorRelatorioUsuario = ferramenta.coordenador.relatorio.usuario
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
@@ -736,6 +738,7 @@ emailEnviarEmail = Send Email
 ############EMAIL BEGIN############
 relatorio = Report
 relatorios = Reports
+boletim = Bulletin
 relatorioBoletimPorPeriodo = Period Report Card
 relatorioVisualisarImprimirRelatorios = Visualize and Print Reports:\n
 relatorioHistoricosEscolar = - Historical School.\n
@@ -746,5 +749,6 @@ relatorioBoletimAnual = Anual Report Card
 relatorioBoletimNotas = Grades Report Card
 relatorioBoletimAluno = Student Report Card
 relatorioHistoricoAluno = Student History
+relatorioUsuarioProfessorDisciplina = Teacher x Discipline
 ############EMAIL END############
 
