--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -37,6 +37,8 @@ menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
 menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
+menuTokenFerramentaCoordenadorBoletim = ferramenta.coordenador.boletim
+menuTokenFerramentaCoordenadorRelatorioUsuario = ferramenta.coordenador.relatorio.usuario
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
@@ -737,6 +739,7 @@ emailEnviarEmail = Enviar Email
 ############EMAIL BEGIN############
 relatorio = Relatório
 relatorios = Relatórios
+boletim = Boletim
 relatorioBoletimPorPeriodo = Boletim Período
 relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatórios:\n
 relatorioHistoricosEscolar = - Históricos Escolar.\n
@@ -747,4 +750,5 @@ relatorioBoletimAnual = Boletim Anual
 relatorioBoletimNotas = Boletim Notas
 relatorioBoletimAluno = Boletim Aluno
 relatorioHistoricoAluno = Historico Aluno
+relatorioUsuarioProfessorDisciplina = Professor x Disciplina
 ############EMAIL END############
