--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -36,6 +36,7 @@ menuTokenFerramentaCoordenadorTopico = ferramenta.coordenador.topico
 menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
+menuTokenFerramentaCoordenadorPresenca = ferramenta.coordenador.presenca
 menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
 menuTokenFerramentaCoordenadorBoletim = ferramenta.coordenador.boletim
 menuTokenFerramentaCoordenadorRelatorioUsuario = ferramenta.coordenador.relatorio.usuario
@@ -48,6 +49,8 @@ menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
+
+menuTokenFerramentaProfessorPresenca = ferramenta.professor.presenca
 menuTokenFerramentaProfessorRelatorio = ferramenta.professor.relatorio
 menuTokenFerramentaAluno = ferramenta.aluno
 menuTokenFerramentaAlunoNota = ferramenta.aluno.nota
@@ -56,6 +59,7 @@ menuTokenFerramentaAlunoComunicado = ferramenta.aluno.comunicado
 menuTokenFerramentaAlunoOcorrencia = ferramenta.aluno.ocorrencia
 menuTokenFerramentaAlunoHierarquia = ferramenta.aluno.hierarquia
 menuTokenFerramentaAlunoDiario = ferramenta.aluno.diario
+menuTokenFerramentaAlunoPresenca = ferramenta.aluno.presenca
 menuTokenFerramentaPais = ferramenta.pais
 menuTokenFerramentaPaisAgenda = ferramenta.pais.agenda
 menuTokenFerramentaPaisComunicado = ferramenta.pais.comunicado
@@ -63,6 +67,7 @@ menuTokenFerramentaPaisOcorrencia = ferramenta.pais.ocorrencia
 menuTokenFerramentaPaisNota = ferramenta.pais.nota
 menuTokenFerramentaPaisHierarquia = ferramenta.pais.hierarquia
 menuTokenFerramentaPaisDiario = ferramenta.pais.diario
+menuTokenFerramentaAlunoPaisPresenca = ferramenta.aluno.pais.presenca
 ########### MainMenu End ############
 
 ###########MainBody Begin ############
