--- a/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -9,11 +9,15 @@ loginLogar = Logar
 loginCampoVazio = Login ou Senha está vazio.
 loginAcessoNegado = Acesso Negado. Verifique se digitou usuário e senha corretamente.
 loginErroSairSistema = Não foi possível sair do sistema.
+loginNovaSenha = Nova senha
+loginConfirmarSenha = Confirmar senha
+loginPrimeiroLogin = Primeiro Login: Por favor altere sua senha
 ########### Login End ############
 
 
 ########### MainTitle Begin ############
-titleNome = Ambiente Pais OnLine
+#titleNome = Ambiente Pais OnLine
+titleNome = Colégio Integrado Pais OnLine
 titleBemVindo = Bem Vindo {0} {1}
 titleConfiguracao = Configurações
 ########### MainTitle End ############
@@ -22,6 +26,8 @@ titleConfiguracao = Configurações
 menuTokenPrincipal = principal
 menuTokenFerramentaCoordenador = ferramenta.coordenador
 menuTokenFerramentaCoordenadorComunicado = ferramenta.coordenador.comunicado
+menuTokenFerramentaCoordenadorOcorrencia = ferramenta.coordenador.ocorrencia
+menuTokenFerramentaCoordenadorCursoAdmin = ferramenta.coordenador.curso.admin
 menuTokenFerramentaCoordenadorCurso = ferramenta.coordenador.curso
 menuTokenFerramentaCoordenadorPeriodo = ferramenta.coordenador.periodo
 menuTokenFerramentaCoordenadorDisciplina = ferramenta.coordenador.disciplina
@@ -30,14 +36,22 @@ menuTokenFerramentaCoordenadorTopico = ferramenta.coordenador.topico
 menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
+menuTokenFerramentaCoordenadorPresenca = ferramenta.coordenador.presenca
+menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
+menuTokenFerramentaCoordenadorBoletim = ferramenta.coordenador.boletim
+menuTokenFerramentaCoordenadorRelatorioUsuario = ferramenta.coordenador.relatorio.usuario
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
+menuTokenFerramentaProfessorConteudoProgramatico = ferramenta.professor.conteudoprogramatico
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
 menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
+
+menuTokenFerramentaProfessorPresenca = ferramenta.professor.presenca
+menuTokenFerramentaProfessorRelatorio = ferramenta.professor.relatorio
 menuTokenFerramentaAluno = ferramenta.aluno
 menuTokenFerramentaAlunoNota = ferramenta.aluno.nota
 menuTokenFerramentaAlunoAgenda = ferramenta.aluno.agenda
@@ -45,6 +59,7 @@ menuTokenFerramentaAlunoComunicado = ferramenta.aluno.comunicado
 menuTokenFerramentaAlunoOcorrencia = ferramenta.aluno.ocorrencia
 menuTokenFerramentaAlunoHierarquia = ferramenta.aluno.hierarquia
 menuTokenFerramentaAlunoDiario = ferramenta.aluno.diario
+menuTokenFerramentaAlunoPresenca = ferramenta.aluno.presenca
 menuTokenFerramentaPais = ferramenta.pais
 menuTokenFerramentaPaisAgenda = ferramenta.pais.agenda
 menuTokenFerramentaPaisComunicado = ferramenta.pais.comunicado
@@ -52,6 +67,7 @@ menuTokenFerramentaPaisOcorrencia = ferramenta.pais.ocorrencia
 menuTokenFerramentaPaisNota = ferramenta.pais.nota
 menuTokenFerramentaPaisHierarquia = ferramenta.pais.hierarquia
 menuTokenFerramentaPaisDiario = ferramenta.pais.diario
+menuTokenFerramentaAlunoPaisPresenca = ferramenta.aluno.pais.presenca
 ########### MainMenu End ############
 
 ###########MainBody Begin ############
@@ -81,9 +97,14 @@ coordenadorAmbienteCompText1 = Administração da Escola: \n
 coordenadorAmbienteCompText2 =- Cursos, Disciplinas e Matérias.\n
 coordenadorAmbienteCompText3 =- Professores, Pais e Alunos.
 
-coordenadorAmbienteComunicado = Comunicados e Novidades da Escola
-coordenadorAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+coordenadorAmbienteComunicado = Comunicados e Emails da Escola
+coordenadorAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 coordenadorAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
+
+coordenadorAmbienteOcorrencia = Ocorrência
+coordenadorAmbienteOcorrenciaCompText1 = Adicionar e Alterar: \n
+coordenadorAmbienteOcorrenciaCompText2 = - Ocorrências dos Alunos.\n
+
 ########### AmbienteDoCoordenador End ############
 
 
@@ -108,8 +129,10 @@ professorAmbienteOcorrencia = Ocorrência
 professorAmbienteOcorrenciaCompText1 = Adicionar e Alterar: \n
 professorAmbienteOcorrenciaCompText2 = - Ocorrências dos Alunos.\n
 
-professorAmbienteComunicado = Comunicados e Novidades da Escola
-professorAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+professorAmbienteConteudoProgramatico = Matéria
+
+professorAmbienteComunicado = Comunicados e Emails da Escola
+professorAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 professorAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 professorAmbienteTopico = Tópicos	
@@ -134,8 +157,8 @@ alunoAmbienteNotasCompText2 = - Gráficos Interativos.\n
 alunoAmbienteNotasCompText3 = - Tabelas Detalhadas.\n
 
 
-alunoAmbienteComunicado = Comunicados e Novidades da Escola
-alunoAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+alunoAmbienteComunicado = Comunicados e Emails da Escola
+alunoAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 alunoAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 alunoAmbienteHierarquia = Visualizar Cursos
@@ -167,8 +190,8 @@ paisAmbienteAgendaCompText2 = - Exercícios.\n
 paisAmbienteAgendaCompText3 = - Trabalhos.\n
 paisAmbienteAgendaCompText4 = - Provas.\n
 
-paisAmbienteComunicado = Comunicados e Novidades da Escola
-paisAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+paisAmbienteComunicado = Comunicados e Emails da Escola
+paisAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 paisAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 paisAmbienteNota = Notas do(s) Filho(s)
@@ -227,7 +250,16 @@ cursoNavegacao = Navegação Cursos
 cursoCompText1 = Adicionar e Alterar Curso: \n
 cursoCompText2 = - Exemplo 01) Ensino Fundamental.\n
 cursoCompText3 = - Exemplo 02) Ensino Médio.
-
+cursoAdmin = Gerenciar Cursos
+cursoAdminCompText1 = Adicionar, Atualizar ou Remover: \n
+cursoAdminCompText2 = Cursos, Períodos, Disciplinas \n
+cursoAdminCompText3 = Matérias ou Tópicos
+cursoImportarAlunosDoCurso = Importar alunos do Curso
+cursoTodosAlunos = Todos Alunos
+cursoStatus = Status
+cursoAtivo = Ativo
+cursoDesativado = Desativado
+cursoDuplicado = O curso ''{0}'' já existe. 
 ########### Curso FIM ###########  
 
 ########### Periodo Begin ###########
@@ -247,6 +279,7 @@ periodoSalvoSucesso = Período salvo com sucesso.
 periodoCompText1 = Adicionar e Alterar Período Escolar: \n
 periodoCompText2 = - Exemplo 01) 1. Bimestre.\n
 periodoCompText3 = - Exemplo 02) 2. Bimestre.  
+periodoDuplicado =  Período ''{0}'' já existe neste curso.
 ########### Periodo FIM ###########  
 
 ########### Disciplina Begin ###########
@@ -277,6 +310,8 @@ disciplinaAdicionarProfessor = Adicionar Professor as Disciplinas
 disciplinaCompText1 = Adicionar e Alterar Disciplinas: \n
 disciplinaCompText2 = - Exemplo 01) Português.\n
 disciplinaCompText3 = - Exemplo 02) Matemática.
+disciplinaDuplicada =  Disciplina ''{0}'' já existe neste período.
+disciplinaObrigatoria = Obrigatória
 ########### Disciplina FIM ###########  
 
 ############ConteudoProgramatico Begin############
@@ -364,6 +399,7 @@ usuarioImportarArquivoExcel = Importar Arquivo Excel
 usuarioListaUsuariosInvalidos = 3 - Resultado de usuários que não puderam ser importados
 usuarioPlanilhaImportadoComSucesso = Arquivo Excel importado com sucesso 
 usuarioErroImportarUsuarios = Não foi possível importar os usuários listados no passo 3. \n  
+usuarioErroImportarUsuariosNull = Não foi possível importar os usuários nenhum usuário. \n
 usuarioRespAcademico = Acadêmico
 usuarioRespFinanceiro = Financeiro
 usuarioDataMatricula = Data Matric
@@ -385,6 +421,13 @@ usuarioCasados = Casados
 usuarioSeparados = Separados
 usuarioOutros = Outros
 usuarioErroLoginDuplicado =  Usuário ''{0}'' já existe.
+usuarioRegistroAluno = Registro Aluno
+usuarioUnidadeEscola = Unidade
+usuarioBaixarPlanilhaExcel = Baixar Planilha Excel
+usuarioCliqueAquiParaBaixar = Clique aqui para baixar
+usuarioRegistro = Registro do Usuário
+usuarioObservacao = Observação
+usuarioStatus = Status
 ############Usuários FIM############  
 
 
@@ -424,9 +467,9 @@ notaMediaFinal = Média Final
 notaSelecionarAlunoDesejaAdicionarAlterarNota = 1 - Por favor, selecione o Aluno que deseja adicionar/alterar a nota
 notaErroBuscarAluno = Não foi possível buscar os Alunos.
 notaInserirAlterarNotasAluno = 2 - Por favor, insira ou altere as notas do aluno
-notaEditarNotasConteudoProgramatico = Editar Notas por Matéria
+notaEditarNotas = Editar Notas
 
-notaNehumaNotaComConteudoProgramatico = Não existe nenhum tópico associado a este Matéria.
+notaNehumaNota = Não existe nenhuma Avaliação para essa Disciplina.
 notaErroAtualizar = Não foi possível atualizar a Nota.
 
 
@@ -438,7 +481,7 @@ notaErroAtualizar = Não foi possível atualizar a Nota.
 avaliacao = Avaliação
 avaliacaoAdicionar = Adicionar Avaliação
 avaliacaoEditar = Editar Avaliação
-avaliacaoAssunto = Assunto Avaliação
+avaliacaoAssunto = Assunto
 avaliacaoDescricao = Descrição
 avaliacaoTipo = Tipo Avaliação
 avaliacaoData = Data
@@ -448,10 +491,16 @@ avaliacaoErroCarregar = Não foi possível carregar as Avaliações.
 avaliacaoErroSalvar = Avaliação não pode ser salva com sucesso!!!
 avaliacaoErroAtualizar = Não foi possível atualizar a Avaliação.
 avaliacaoErroRemover = Não foi possível remover a Avaliação.
-avaliacaoNenhumaCurso = Nenhuma Avaliação cadastrada nesse curso.
+avaliacaoNenhumaCurso = Nenhuma avaliação cadastrada nesse curso.
+avaliacaoNenhumaDisciplina = Nenhuma avaliação cadastrada nessa disciplina.
 avaliacaoSelecioneCurso = Por favor, selecione o curso.
 avaliacaoSalva = Avaliação salva com sucesso.
 avaliacaoDesejaRemover = Deseja realmente remover essa Avaliação: {0} ?
+avaliacaoPesoNota = Peso
+avaliacaoErroRecuperacao = Não é possível duas recuperações no mesmo Período e na mesma Disciplina
+avaliacaoErroRecuperacaoFinal = Não é possível adicionar duas Recuperações Finais no mesmo Curso
+avaliacaoErroAssunto = Não é possível adicionar duas Avaliações com o mesmo Assunto no mesmo Período e Disciplina
+avaliacaoRecuperacao = Recuperação
 ########### AVALIAÇÔES End###########
 
 
@@ -472,6 +521,7 @@ agendaSetDayOfWeekFormat = EEE
 agendaSetAm = AM
 agendaSetPm = PM
 agendaSetNoon = 12:00 pm
+agendaDetalhes = Detalhes
 ########### AGENDA END ###########
 
 ########### OCORRENCIA BEGIN ###########
@@ -500,6 +550,12 @@ ocorrenciaAlunosAssociados = Alunos associados
 ocorrenciaNomeDosAlunos = Nome dos Alunos:
 ocorrenciaSalvarOcorrencia = Salvar Ocorrência
 ocorrenciaErroSemUmConteudoProgramatico = Não é possível inserir ocorrência sem uma Matéria válida
+ocorrenciaLiberarLeituraPai = Pais podem ler?
+ocorrenciaFiltrar = Filtrar Ocorrencia
+ocorrenciaParaAprovar = Para aprovar
+ocorrenciaJaAprovadas = Já aprovadas
+ocorrenciaVisualizar = Visualizar Ocorrências
+ocorrenciaAprovar = Aprovar Ocorrências
 ########### OCORRENCIA END ###########
 
 ########### PRESENCA BEGIN ###########
@@ -541,6 +597,11 @@ professorNome = Nome Professor
 ########### PROFESSOR End ###########
 
 
+########### Pais Begin ###########
+pais = Pais
+paisNome = Nome Pais
+########### PROFESSOR End ###########
+
 
 
 ############USO GERAL BEGIN############
@@ -557,6 +618,7 @@ geralAjuda = Ajuda
 geralSalvar = Salvar
 geralCancelar = Cancelar
 geralCampoObrigatorio = Campo ''{0}'' é de preenchimento obrigatório!
+geralEmailInvalido = Formato de email inválido no campo ''{0}''!
 geralErroAtualizar = Não foi possível atualizar {0}.
 geralErroCarregar = Não foi possível carregar {0}.
 geralErroCarregarDados = Não foi possível carregar os dados.
@@ -568,8 +630,16 @@ geralSair = Sair
 geralOk = OK
 geralNumeroInteiro = Número Inteiro
 geralNumeroDouble = Número do tipo 10.0 ou 9.0
+geralValorEntre0E10 = Número entre 0 e 10
 geralRecarregarAmbiente = O Ambiente será recarregado para reativar a sua sessão. Obrigado.
 geralErro = Erro
+geralFecharJanela = Fechar Janela
+geralRegarregarPagina = Por favor, tente recarregar a página.
+geralBreakLine = \n
+geralImprimir = Imprimir
+geralExcel = Gerar Planilha Excel
+geralErroCaracterColchete = Os caracteres "[" ou "]" não são permitidos nesse campo
+geralMultipleExcel = Gerar Multiplas Planilhas Excel
 ############USO GERAL END############
 
 
@@ -637,3 +707,53 @@ tipoPaiOutros = Outros
 sexoFeminino = Feminino
 sexoMasculino = Masculino 
 ############Sexo END############
+
+############Documento BEGIN############
+documentoSelecionarContrato = Por favor, selecione o contrato que deseja enviar para os pais
+documentoContrato = Contrato
+documentoFiltrarPais = Filtrar pais
+documentoPorCurso = Por Curso
+documentoPorNome = Por Nome
+documentoCursoParaFilterPais = Por favor, selecione o curso para filtrar os pais.
+documentoFiltro = Filtro 
+documentoReponsavel = Responsável
+documentoEnviarContratoPorEmail = Enviar contrato por Email
+documentoEmailNovosPais = Enviando email para os novos pais adicionados.
+documentoErroEmail = Erro no envio de emails.
+documentoFinanceiro = Financeiro
+documentoAcademico = Acadêmico
+documentoTodos = Todos
+documentoImprimirContrato = Imprimir Contrato
+############Documento END############
+
+############EMAIL BEGIN############
+emailEnviado = Email enviado com sucesso
+emailAssunto = Assunto
+emailEmail = Email
+emailAnexo = Anexo
+emailFiltroCurso = Filtro Curso
+emailPara = Para
+emailTipoUsuario = Tipo Usuario 
+emailPeloMenosUsuarioPrecisaSerSelecionado = Pelo menos 1 usuário precisa estar selecionado.  
+emailAbrirTelaParaVisualizarEmails = Abrir tela para visualizar emails
+emailTodosOsCursos = Todos os Cursos
+emailEscolherArquivo = Escolher Arquivo
+emailEnviarEmail = Enviar Email
+############EMAIL END############
+
+############EMAIL BEGIN############
+relatorio = Relatório
+relatorios = Relatórios
+boletim = Boletim
+relatorioBoletimPorPeriodo = Boletim Período
+relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatórios:\n
+relatorioHistoricosEscolar = - Históricos Escolar.\n
+relatorioBoletimSalas = - Boletim Cursos.\n
+relatorioFechamentoAno = - Fechamento Ano, entre outros.
+relatorioBoletimDisciplina = Boletim Disciplina
+relatorioBoletimAnual = Boletim Anual
+relatorioBoletimNotas = Boletim Notas
+relatorioBoletimAluno = Boletim Aluno
+relatorioHistoricoAluno = Historico Aluno
+relatorioUsuarioProfessorDisciplina = Professor x Disciplina
+############EMAIL END############
