--- a/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants.properties
+++ b/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants.properties
@@ -8,11 +8,15 @@ loginLogar = Login
 loginCampoVazio = User or Password empty
 loginAcessoNegado = Access Denied. Please check you user or password.
 loginErroSairSistema = It was not possible to logout.
+loginNovaSenha = New password
+loginConfirmarSenha = Confirm password
+loginPrimeiroLogin = First Login: Please change your password
 ########### Login End ############
 
 
 ########### MainTitle Begin ############
-titleNome = Environment Parents OnLine
+#titleNome = Environment Parents OnLine
+titleNome = Integrado School Parents OnLine
 titleBemVindo = Welcome {0} {1}
 titleConfiguracao = Settings
 ########### MainTitle End ############
@@ -21,6 +25,8 @@ titleConfiguracao = Settings
 menuTokenPrincipal = principal
 menuTokenFerramentaCoordenador = ferramenta.coordenador
 menuTokenFerramentaCoordenadorComunicado = ferramenta.coordenador.comunicado
+menuTokenFerramentaCoordenadorOcorrencia = ferramenta.coordenador.ocorrencia
+menuTokenFerramentaCoordenadorCursoAdmin = ferramenta.coordenador.curso.admin
 menuTokenFerramentaCoordenadorCurso = ferramenta.coordenador.curso
 menuTokenFerramentaCoordenadorPeriodo = ferramenta.coordenador.periodo
 menuTokenFerramentaCoordenadorDisciplina = ferramenta.coordenador.disciplina
@@ -29,14 +35,21 @@ menuTokenFerramentaCoordenadorTopico = ferramenta.coordenador.topico
 menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
+menuTokenFerramentaCoordenadorPresenca = ferramenta.coordenador.presenca
+menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
+menuTokenFerramentaCoordenadorBoletim = ferramenta.coordenador.boletim
+menuTokenFerramentaCoordenadorRelatorioUsuario = ferramenta.coordenador.relatorio.usuario
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
+menuTokenFerramentaProfessorConteudoProgramatico = ferramenta.professor.conteudoprogramatico
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
 menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
+menuTokenFerramentaProfessorPresenca = ferramenta.professor.presenca
+menuTokenFerramentaProfessorRelatorio = ferramenta.professor.relatorio
 menuTokenFerramentaAluno = ferramenta.aluno
 menuTokenFerramentaAlunoNota = ferramenta.aluno.nota
 menuTokenFerramentaAlunoAgenda = ferramenta.aluno.agenda
@@ -44,6 +57,7 @@ menuTokenFerramentaAlunoComunicado = ferramenta.aluno.comunicado
 menuTokenFerramentaAlunoOcorrencia = ferramenta.aluno.ocorrencia
 menuTokenFerramentaAlunoHierarquia = ferramenta.aluno.hierarquia
 menuTokenFerramentaAlunoDiario = ferramenta.aluno.diario
+menuTokenFerramentaAlunoPresenca = ferramenta.aluno.presenca
 menuTokenFerramentaPais = ferramenta.pais
 menuTokenFerramentaPaisAgenda = ferramenta.pais.agenda
 menuTokenFerramentaPaisComunicado = ferramenta.pais.comunicado
@@ -51,6 +65,7 @@ menuTokenFerramentaPaisOcorrencia = ferramenta.pais.ocorrencia
 menuTokenFerramentaPaisNota = ferramenta.pais.nota
 menuTokenFerramentaPaisHierarquia = ferramenta.pais.hierarquia
 menuTokenFerramentaPaisDiario = ferramenta.pais.diario
+menuTokenFerramentaAlunoPaisPresenca = ferramenta.aluno.pais.presenca
 ########### MainMenu End ############
 
 ###########MainBody Begin ############
@@ -80,14 +95,19 @@ coordenadorAmbienteCompText1 = School Administration: \n
 coordenadorAmbienteCompText2 =- Courses, Disciplines, Subjects.\n
 coordenadorAmbienteCompText3 =- Teachers, Parents and Students.
 
-coordenadorAmbienteComunicado = News and Announcement
-coordenadorAmbienteComunicadoCompText1 = Announcement and News for : \n
+coordenadorAmbienteComunicado = News and Emails
+coordenadorAmbienteComunicadoCompText1 = News and Emails for : \n
 coordenadorAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
+
+coordenadorAmbienteOcorrencia = NonConformance
+coordenadorAmbienteOcorrenciaCompText1 = Add and Update: \n
+coordenadorAmbienteOcorrenciaCompText2 = - Student NonConformance.\n
+
 ########### AmbienteDoCoordenador End ############
 
 
 ########### AmbienteDoProfessor Begin ############
-professorAmbiente = Professsor Environment
+professorAmbiente = Professor Environment
 professorAmbienteCompText1 = Add and Update: \n
 professorAmbienteCompText2 = - Subject.\n
 professorAmbienteCompText3 = - Topics.\n
@@ -107,8 +127,10 @@ professorAmbienteOcorrencia = NonConformance
 professorAmbienteOcorrenciaCompText1 = Add and Update: \n
 professorAmbienteOcorrenciaCompText2 = - Student NonConformance.\n
 
-professorAmbienteComunicado = News and Announcement
-professorAmbienteComunicadoCompText1 = News and Announcement for: \n
+professorAmbienteConteudoProgramatico = Subject
+
+professorAmbienteComunicado = News and Emails
+professorAmbienteComunicadoCompText1 = News and Email for: \n
 professorAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 professorAmbienteTopico = Topics	
@@ -135,8 +157,8 @@ alunoAmbienteNotasCompText2 = - Interactive Charts.\n
 alunoAmbienteNotasCompText3 = - Detailed Tables.\n
 
 
-alunoAmbienteComunicado = News and Announcement
-alunoAmbienteComunicadoCompText1 = News and Announcement for: \n
+alunoAmbienteComunicado = News and Emails
+alunoAmbienteComunicadoCompText1 = News and Emails for: \n
 alunoAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 alunoAmbienteHierarquia = Course Visualization
@@ -160,7 +182,7 @@ alunoAmbienteOcorrenciaCompText3 =- Courses.\n
 paisAmbiente = Parents Environment
 paisAmbienteCompText1 = Monitoring by: \n
 paisAmbienteCompText2 = - School Calendar, Grades, Homework.\n
-paisAmbienteCompText3 = - News and Communication.\n
+paisAmbienteCompText3 = - News and Emails.\n
 
 paisAmbienteAgenda = Student Agenda
 paisAmbienteAgendaCompText1 = See the agenda dates for:\n
@@ -168,8 +190,8 @@ paisAmbienteAgendaCompText2 = - Exercises.\n
 paisAmbienteAgendaCompText3 = - Homework.\n
 paisAmbienteAgendaCompText4 = - Exams.\n
 
-paisAmbienteComunicado = News and Announcement
-paisAmbienteComunicadoCompText1 = News and Announcement for: \n
+paisAmbienteComunicado = News and Emails
+paisAmbienteComunicadoCompText1 = News and Emails for: \n
 paisAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 paisAmbienteNota = Student Grades
@@ -228,7 +250,16 @@ cursoNavegacao = Course Navigation
 cursoCompText1 = Add and Update Course: \n
 cursoCompText2 = - Example 01) Fundamental Education.\n
 cursoCompText3 = - Example 02) Medium Education.
-
+cursoAdmin = Courses Management
+cursoAdminCompText1 = Add, Update or Remove: \n
+cursoAdminCompText2 = Courses, Periods, Disciplines \n
+cursoAdminCompText3 = Subjects or Topics
+cursoImportarAlunosDoCurso = Import students from course
+cursoTodosAlunos = All students
+cursoStatus = Status
+cursoAtivo = Enable
+cursoDesativado = Disable
+cursoDuplicado = The following course ''{0}'' already exists.
 ########### Curso FIM ###########  
 
 ########### Periodo Begin ###########
@@ -248,6 +279,7 @@ periodoSalvoSucesso = Period successfully saved
 periodoCompText1 = Add and Update School Period: \n
 periodoCompText2 = - Example 01) 1. Bimester.\n
 periodoCompText3 = - Example 02) 2. Bimester.  
+periodoDuplicado =  Period ''{0}'' already exist on this course.
 ########### Periodo FIM ###########  
 
 ########### Disciplina Begin ###########
@@ -278,6 +310,8 @@ disciplinaAdicionarProfessor = Add Professor to the Disciplines
 disciplinaCompText1 = Add and Update Disciplines: \n
 disciplinaCompText2 = - Example 01) English.\n
 disciplinaCompText3 = - Example 02) Math.
+disciplinaDuplicada =  Discipline ''{0}'' already exists in this period.
+disciplinaObrigatoria = Mandatory
 ########### Disciplina FIM ###########  
 
 ############ConteudoProgramatico Begin############
@@ -364,7 +398,8 @@ usuarioSelecionarArquivoExcel = 2 - Please, select the file and perform the uplo
 usuarioImportarArquivoExcel = Import Excel File
 usuarioListaUsuariosInvalidos = 3 - The following users could not be imported
 usuarioPlanilhaImportadoComSucesso = Excel file successfully imported 
-usuarioErroImportarUsuarios = Não foi possível importar os usuarios listados no passo 3.
+usuarioErroImportarUsuarios = It was not possible to import the users listed on table 3. \n
+usuarioErroImportarUsuariosNull = It was not possible to import any users. \n
 usuarioRespAcademico = Academic
 usuarioRespFinanceiro = Financial
 usuarioDataMatricula = Matric Date
@@ -386,6 +421,13 @@ usuarioCasados = Married
 usuarioSeparados = Separated
 usuarioOutros = Other
 usuarioErroLoginDuplicado =  User ''{0}'' already exists.
+usuarioRegistroAluno = Student Number
+usuarioUnidadeEscola = Unit
+usuarioBaixarPlanilhaExcel = Download Excel Spreadsheet
+usuarioCliqueAquiParaBaixar = Click here to download
+usuarioRegistro = User Register
+usuarioObservacao = Observation
+usuarioStatus = Status
 ############Usuários FIM############  
 
 
@@ -425,9 +467,9 @@ notaMediaFinal = Final Average
 notaSelecionarAlunoDesejaAdicionarAlterarNota = 1 - Please select the student you want to add/update grades
 notaErroBuscarAluno = It was not possible to load students.
 notaInserirAlterarNotasAluno = 2 - Please enter or update a Student grade
-notaEditarNotasConteudoProgramatico = Update Grades by Subject
+notaEditarNotas = Update Grades
 
-notaNehumaNotaComConteudoProgramatico = There is no topic associated with this Subject.
+notaNehumaNota = There is no Evaluation for this Discipline.
 notaErroAtualizar = It was not possible to update the grade.
 
 
@@ -439,7 +481,7 @@ notaErroAtualizar = It was not possible to update the grade.
 avaliacao = Evaluation
 avaliacaoAdicionar = Add Evaluation
 avaliacaoEditar = Add Evaluation
-avaliacaoAssunto = Subject Evaluation
+avaliacaoAssunto = Subject
 avaliacaoDescricao = Description
 avaliacaoTipo = Evaluation Type
 avaliacaoData = Date
@@ -450,9 +492,15 @@ avaliacaoErroSalvar = It was not possible to save Evaluation!!!
 avaliacaoErroAtualizar = It was not possible to update Evaluation.
 avaliacaoErroRemover = It was not possible to remove Evaluation.
 avaliacaoNenhumaCurso = There is no Evaluation created for this Course.
+avaliacaoNenhumaDisciplina = There is no Evaluation created for this Discipline.
 avaliacaoSelecioneCurso = Please, select the Course.
 avaliacaoSalva = Evaluation successfully saved.
 avaliacaoDesejaRemover = Do you really want to remove this Evaluation: {0} ?
+avaliacaoPesoNota = Weight
+avaliacaoErroRecuperacao = It is not possible add in the same Period and Discipline the retake test twice
+avaliacaoErroRecuperacaoFinal = It is not possible add in the same Course the final retake test twice
+avaliacaoErroAssunto = It is not possible add the same subject twice in the same Period and Discipline
+avaliacaoRecuperacao = Retake test
 ########### AVALIAÇÔES End###########
 
 
@@ -473,6 +521,7 @@ agendaSetDayOfWeekFormat = EEE
 agendaSetAm = AM
 agendaSetPm = PM
 agendaSetNoon = 12:00 pm
+agendaDetalhes = Details
 ########### AGENDA END ###########
 
 ########### OCORRENCIA BEGIN ###########
@@ -486,7 +535,6 @@ ocorrenciaHora = NonConformance Hour
 ocorrenciaErroAtualizar = It was not possible to update NonConformance.
 ocorrenciaErroCarregar = It was not possible to load NonConformance.
 ocorrenciaErroBuscarAluno = It was not possible to load the Students.
-
 ocorrenciaErroSalvar = NonConformance can not be saved!!!
 ocorrenciaSalva = NonConformance successfully saved.
 ocorrenciaAtualizada = NonConformance successfully updated.
@@ -501,6 +549,12 @@ ocorrenciaAlunosAssociados = Associated Students
 ocorrenciaNomeDosAlunos = Students Name
 ocorrenciaSalvarOcorrencia = Save NonConformance
 ocorrenciaErroSemUmConteudoProgramatico = It is not possible to add a NonConformance without a Subject
+ocorrenciaLiberarLeituraPai = Can Parents Read?
+ocorrenciaFiltrar = Filter NonConformance
+ocorrenciaParaAprovar = To Approve
+ocorrenciaJaAprovadas = Already Approved
+ocorrenciaVisualizar = List NonConformance
+ocorrenciaAprovar = Approve NonConformance
 ########### OCORRENCIA END ###########
 
 
@@ -542,7 +596,10 @@ professorNome = Professor Name
 ########### PROFESSOR End ###########
 
 
-
+########### Pais Begin ###########
+pais = Parents
+paisNome = Parents Name
+########### PROFESSOR End ###########
 
 ############USO GERAL BEGIN############
 geralCarregando = loading ...
@@ -558,6 +615,7 @@ geralAjuda = Help
 geralSalvar = Save
 geralCancelar = Cancel
 geralCampoObrigatorio = Field ''{0}'' is mandatory!
+geralEmailInvalido = Email format not valid on field ''{0}''!
 geralErroAtualizar = It was not possible to update {0}.
 geralErroCarregar = It was not possible to load {0}.
 geralErroCarregarDados = It was not possible to load data.
@@ -569,8 +627,16 @@ geralSair = Logout
 geralOk = OK
 geralNumeroInteiro = Integer Number
 geralNumeroDouble = Number like 10.0 or 9.0
+geralValorEntre0E10 = Number between 0 and 10
 geralRecarregarAmbiente = The environment will be reloaded to reactivate your session. Thank you.
 geralErro = Error
+geralFecharJanela = Close Window
+geralRegarregarPagina = Please, try to reload the page.
+geralBreakLine = \n
+geralImprimir = Print
+geralExcel = Generate Excel Spreadsheet 
+geralErroCaracterColchete = The characters "[" or "]" are not allowed at this field
+geralMultipleExcel = Generate Multiple Excel Spreadsheets 
 ############USO GERAL END############
 
 
@@ -578,7 +644,7 @@ geralErro = Error
 idioma = Language
 idiomaIngles = English (US)
 idiomaPortugues = Portuguese (Brazil)
-idiomaErroSalvar = Idioma could not be saved!
+idiomaErroSalvar = Language could not be saved!
 senhaAlterar = Change Password 
 senhaErroSalvar = Password could not be saved!
 senhaNaoConfere = Password does no match, please try again.
@@ -638,3 +704,55 @@ tipoPaiOutros = Other
 sexoFeminino = Female
 sexoMasculino = Male 
 ############Sexo END############
+
+
+############Documento BEGIN############
+documentoSelecionarContrato = Please, select the desired contract for sending to parents.
+documentoContrato = Contract
+documentoFiltrarPais = Parents Filter
+documentoPorCurso = By Course
+documentoPorNome = By Name
+documentoCursoParaFilterPais = Please, select the course to filter the parents.
+documentoFiltro = Filter 
+documentoReponsavel = Responsable
+documentoEnviarContratoPorEmail = Send contract by email
+documentoEmailNovosPais = Sending email to the new added parents.
+documentoErroEmail = Error to send email.
+documentoFinanceiro = Financial
+documentoAcademico = Academic
+documentoTodos = All
+documentoImprimirContrato = Print Contract
+############Documento END############
+
+############EMAIL BEGIN############
+emailEnviado = Email successfully sent
+emailAssunto = Subject
+emailEmail = Email
+emailAnexo = Attachment
+emailFiltroCurso = Course Filter
+emailPara = For
+emailTipoUsuario = User Type 
+emailPeloMenosUsuarioPrecisaSerSelecionado = At least 1 user must be selected.  
+emailAbrirTelaParaVisualizarEmails = Open screen to visualize emails
+emailTodosOsCursos = All Courses
+emailEscolherArquivo = Choose File
+emailEnviarEmail = Send Email
+############EMAIL END############
+
+############EMAIL BEGIN############
+relatorio = Report
+relatorios = Reports
+boletim = Bulletin
+relatorioBoletimPorPeriodo = Period Report Card
+relatorioVisualisarImprimirRelatorios = Visualize and Print Reports:\n
+relatorioHistoricosEscolar = - Historical School.\n
+relatorioBoletimSalas = - Report Card Courses.\n
+relatorioFechamentoAno = - Year closing and others.
+relatorioBoletimDisciplina = Discipline Report Card 
+relatorioBoletimAnual = Anual Report Card
+relatorioBoletimNotas = Grades Report Card
+relatorioBoletimAluno = Student Report Card
+relatorioHistoricoAluno = Student History
+relatorioUsuarioProfessorDisciplina = Teacher x Discipline
+############EMAIL END############
+
